versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Nuclide.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalNuclide
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function NuclideDefaultConst() &
      bind(C, name='NuclideDefaultConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: NuclideDefaultConst
end function NuclideDefaultConst

!! Create, default
function NuclideDefault() &
      bind(C, name='NuclideDefault')
   use iso_c_binding
   implicit none
   type(c_ptr) :: NuclideDefault
end function NuclideDefault

!! Create, general, const
function NuclideCreateConst( &
   id, &
   mass, &
   charge, &
   nucleus, &
   decayData, &
   fissionFragmentData, &
   idSize &
) &
      bind(C, name='NuclideCreateConst')
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
   type(c_ptr), value :: mass
   type(c_ptr), value :: charge
   type(c_ptr), value :: nucleus
   type(c_ptr), value :: decayData
   type(c_ptr), value :: fissionFragmentData
   type(c_ptr) :: NuclideCreateConst
end function NuclideCreateConst

!! Create, general
function NuclideCreate( &
   id, &
   mass, &
   charge, &
   nucleus, &
   decayData, &
   fissionFragmentData, &
   idSize &
) &
      bind(C, name='NuclideCreate')
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
   type(c_ptr), value :: mass
   type(c_ptr), value :: charge
   type(c_ptr), value :: nucleus
   type(c_ptr), value :: decayData
   type(c_ptr), value :: fissionFragmentData
   type(c_ptr) :: NuclideCreate
end function NuclideCreate

!! Assign
subroutine NuclideAssign(handleLHS, handleRHS) &
      bind(C, name='NuclideAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine NuclideAssign

!! Delete
subroutine NuclideDelete(handle) &
      bind(C, name='NuclideDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine NuclideDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function NuclideRead(handle, filename, filenameSize) &
      bind(C, name='NuclideRead')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: NuclideRead
end function NuclideRead

!! Write to file
function NuclideWrite(handle, filename, filenameSize) &
      bind(C, name='NuclideWrite')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: NuclideWrite
end function NuclideWrite

!! Print to standard output, in our prettyprinting format
function NuclidePrint(handle) &
      bind(C, name='NuclidePrint')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclidePrint
end function NuclidePrint

!! Print to standard output, as XML
function NuclidePrintXML(handle) &
      bind(C, name='NuclidePrintXML')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclidePrintXML
end function NuclidePrintXML

!! Print to standard output, as JSON
function NuclidePrintJSON(handle) &
      bind(C, name='NuclidePrintJSON')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclidePrintJSON
end function NuclidePrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: id
!! -----------------------------------------------------------------------------

!! Has
function NuclideIdHas(handle) &
      bind(C, name='NuclideIdHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideIdHas
end function NuclideIdHas

!! Get
function NuclideIdGet(handle) &
      bind(C, name='NuclideIdGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideIdGet
end function NuclideIdGet

!! Set
subroutine NuclideIdSet(handle, id, idSize) &
      bind(C, name='NuclideIdSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: idSize
   character(c_char), intent(in) :: id(idSize)
end subroutine NuclideIdSet


!! -----------------------------------------------------------------------------
!! Child: mass
!! -----------------------------------------------------------------------------

!! Has
function NuclideMassHas(handle) &
      bind(C, name='NuclideMassHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideMassHas
end function NuclideMassHas

!! Get, const
function NuclideMassGetConst(handle) &
      bind(C, name='NuclideMassGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideMassGetConst
end function NuclideMassGetConst

!! Get
function NuclideMassGet(handle) &
      bind(C, name='NuclideMassGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideMassGet
end function NuclideMassGet

!! Set
subroutine NuclideMassSet(handle, fieldHandle) &
      bind(C, name='NuclideMassSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine NuclideMassSet


!! -----------------------------------------------------------------------------
!! Child: charge
!! -----------------------------------------------------------------------------

!! Has
function NuclideChargeHas(handle) &
      bind(C, name='NuclideChargeHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideChargeHas
end function NuclideChargeHas

!! Get, const
function NuclideChargeGetConst(handle) &
      bind(C, name='NuclideChargeGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideChargeGetConst
end function NuclideChargeGetConst

!! Get
function NuclideChargeGet(handle) &
      bind(C, name='NuclideChargeGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideChargeGet
end function NuclideChargeGet

!! Set
subroutine NuclideChargeSet(handle, fieldHandle) &
      bind(C, name='NuclideChargeSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine NuclideChargeSet


!! -----------------------------------------------------------------------------
!! Child: nucleus
!! -----------------------------------------------------------------------------

!! Has
function NuclideNucleusHas(handle) &
      bind(C, name='NuclideNucleusHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideNucleusHas
end function NuclideNucleusHas

!! Get, const
function NuclideNucleusGetConst(handle) &
      bind(C, name='NuclideNucleusGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideNucleusGetConst
end function NuclideNucleusGetConst

!! Get
function NuclideNucleusGet(handle) &
      bind(C, name='NuclideNucleusGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideNucleusGet
end function NuclideNucleusGet

!! Set
subroutine NuclideNucleusSet(handle, fieldHandle) &
      bind(C, name='NuclideNucleusSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine NuclideNucleusSet


!! -----------------------------------------------------------------------------
!! Child: decayData
!! -----------------------------------------------------------------------------

!! Has
function NuclideDecayDataHas(handle) &
      bind(C, name='NuclideDecayDataHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideDecayDataHas
end function NuclideDecayDataHas

!! Get, const
function NuclideDecayDataGetConst(handle) &
      bind(C, name='NuclideDecayDataGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideDecayDataGetConst
end function NuclideDecayDataGetConst

!! Get
function NuclideDecayDataGet(handle) &
      bind(C, name='NuclideDecayDataGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideDecayDataGet
end function NuclideDecayDataGet

!! Set
subroutine NuclideDecayDataSet(handle, fieldHandle) &
      bind(C, name='NuclideDecayDataSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine NuclideDecayDataSet


!! -----------------------------------------------------------------------------
!! Child: fissionFragmentData
!! -----------------------------------------------------------------------------

!! Has
function NuclideFissionFragmentDataHas(handle) &
      bind(C, name='NuclideFissionFragmentDataHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: NuclideFissionFragmentDataHas
end function NuclideFissionFragmentDataHas

!! Get, const
function NuclideFissionFragmentDataGetConst(handle) &
      bind(C, name='NuclideFissionFragmentDataGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideFissionFragmentDataGetConst
end function NuclideFissionFragmentDataGetConst

!! Get
function NuclideFissionFragmentDataGet(handle) &
      bind(C, name='NuclideFissionFragmentDataGet')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: NuclideFissionFragmentDataGet
end function NuclideFissionFragmentDataGet

!! Set
subroutine NuclideFissionFragmentDataSet(handle, fieldHandle) &
      bind(C, name='NuclideFissionFragmentDataSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine NuclideFissionFragmentDataSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalNuclide
